<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/killit"
            android:icon="@drawable/ic_sentiment_very_dissatisfied_black_24dp"
            android:title="@string/kill" />

        <item
            android:id="@+id/back"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/back" />
        <item
            android:id="@+id/inventory"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/inventory"
            />
        <item
            android:id="@+id/colibri"
            android:icon="@drawable/ic_hummingbird_silhouette_2"
            android:title="@string/colibri"
            />

        <item
            android:id="@+id/fenykep"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/snap"
            />

    </group>
</menu>